// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`layout goldens > careerBacon {"searchId":105} @beside 1`] = `
{
  "attrs": "79d65af75898db55",
  "colour": "dc7a69237f57352e",
  "decor": "7b99d7164640466b",
  "delays": null,
  "trailDelays": "7a078e112ae41257",
  "trails": "aa8017537a943a4b",
}
`;

exports[`layout goldens > careerBacon {"searchId":105} @phone 1`] = `
{
  "attrs": "8990ab2fdc32086a",
  "colour": "dc7a69237f57352e",
  "decor": "3d88ed0a8bc041bd",
  "delays": null,
  "trailDelays": "7a078e112ae41257",
  "trails": "9a5be40dbbb065e2",
}
`;

exports[`layout goldens > careerBacon {"searchId":105} @stacked 1`] = `
{
  "attrs": "d6bc9bddca2abe70",
  "colour": "dc7a69237f57352e",
  "decor": "64fd7b24808b70fc",
  "delays": null,
  "trailDelays": "7a078e112ae41257",
  "trails": "15027ba948420857",
}
`;

exports[`layout goldens > careerBacon {"searchId":null} @beside 1`] = `
{
  "attrs": "5d5041ca83d2172e",
  "colour": "08b6aa8d320f49e1",
  "decor": "7b99d7164640466b",
  "delays": null,
  "trailDelays": "7a078e112ae41257",
  "trails": "aa8017537a943a4b",
}
`;

exports[`layout goldens > careerBacon {"searchId":null} @phone 1`] = `
{
  "attrs": "a8b0dbbfd6dc82e8",
  "colour": "08b6aa8d320f49e1",
  "decor": "3d88ed0a8bc041bd",
  "delays": null,
  "trailDelays": "7a078e112ae41257",
  "trails": "9a5be40dbbb065e2",
}
`;

exports[`layout goldens > careerBacon {"searchId":null} @stacked 1`] = `
{
  "attrs": "4f2243e2efc91d15",
  "colour": "08b6aa8d320f49e1",
  "decor": "64fd7b24808b70fc",
  "delays": null,
  "trailDelays": "7a078e112ae41257",
  "trails": "15027ba948420857",
}
`;

exports[`layout goldens > careerMany {"searchId":105} @beside 1`] = `
{
  "attrs": "8b1ff2f3735b1cd9",
  "colour": "fb88fd3ecfb31ad4",
  "decor": "7b99d7164640466b",
  "delays": null,
  "trailDelays": "e8e459a5709789ac",
  "trails": "f94e8f0aa1d273e4",
}
`;

exports[`layout goldens > careerMany {"searchId":105} @phone 1`] = `
{
  "attrs": "d493e32fb25d6aa6",
  "colour": "fb88fd3ecfb31ad4",
  "decor": "3d88ed0a8bc041bd",
  "delays": null,
  "trailDelays": "e8e459a5709789ac",
  "trails": "4d3bed385ff4e20e",
}
`;

exports[`layout goldens > careerMany {"searchId":105} @stacked 1`] = `
{
  "attrs": "b1c6e44551e5ce73",
  "colour": "fb88fd3ecfb31ad4",
  "decor": "64fd7b24808b70fc",
  "delays": null,
  "trailDelays": "e8e459a5709789ac",
  "trails": "648bf4fbe439bc1f",
}
`;

exports[`layout goldens > careerMany {"searchId":null} @beside 1`] = `
{
  "attrs": "2f5d1bfaef6f012c",
  "colour": "5f5ece06abfb86fd",
  "decor": "7b99d7164640466b",
  "delays": null,
  "trailDelays": "e8e459a5709789ac",
  "trails": "f94e8f0aa1d273e4",
}
`;

exports[`layout goldens > careerMany {"searchId":null} @phone 1`] = `
{
  "attrs": "25729eb51b568e24",
  "colour": "5f5ece06abfb86fd",
  "decor": "3d88ed0a8bc041bd",
  "delays": null,
  "trailDelays": "e8e459a5709789ac",
  "trails": "4d3bed385ff4e20e",
}
`;

exports[`layout goldens > careerMany {"searchId":null} @stacked 1`] = `
{
  "attrs": "ddfe16b17b90229d",
  "colour": "5f5ece06abfb86fd",
  "decor": "64fd7b24808b70fc",
  "delays": null,
  "trailDelays": "e8e459a5709789ac",
  "trails": "648bf4fbe439bc1f",
}
`;

exports[`layout goldens > careerTrio {"searchId":105} @beside 1`] = `
{
  "attrs": "8b1ff2f3735b1cd9",
  "colour": "fb88fd3ecfb31ad4",
  "decor": "7b99d7164640466b",
  "delays": null,
  "trailDelays": "6e76de75dd4a66ba",
  "trails": "e1e954483b0e3bc1",
}
`;

exports[`layout goldens > careerTrio {"searchId":105} @phone 1`] = `
{
  "attrs": "d493e32fb25d6aa6",
  "colour": "fb88fd3ecfb31ad4",
  "decor": "3d88ed0a8bc041bd",
  "delays": null,
  "trailDelays": "6e76de75dd4a66ba",
  "trails": "9680babf7a8f1938",
}
`;

exports[`layout goldens > careerTrio {"searchId":105} @stacked 1`] = `
{
  "attrs": "b1c6e44551e5ce73",
  "colour": "fb88fd3ecfb31ad4",
  "decor": "64fd7b24808b70fc",
  "delays": null,
  "trailDelays": "6e76de75dd4a66ba",
  "trails": "90bd0c6493ca51c1",
}
`;

exports[`layout goldens > careerTrio {"searchId":null} @beside 1`] = `
{
  "attrs": "2f5d1bfaef6f012c",
  "colour": "5f5ece06abfb86fd",
  "decor": "7b99d7164640466b",
  "delays": null,
  "trailDelays": "6e76de75dd4a66ba",
  "trails": "e1e954483b0e3bc1",
}
`;

exports[`layout goldens > careerTrio {"searchId":null} @phone 1`] = `
{
  "attrs": "25729eb51b568e24",
  "colour": "5f5ece06abfb86fd",
  "decor": "3d88ed0a8bc041bd",
  "delays": null,
  "trailDelays": "6e76de75dd4a66ba",
  "trails": "9680babf7a8f1938",
}
`;

exports[`layout goldens > careerTrio {"searchId":null} @stacked 1`] = `
{
  "attrs": "ddfe16b17b90229d",
  "colour": "5f5ece06abfb86fd",
  "decor": "64fd7b24808b70fc",
  "delays": null,
  "trailDelays": "6e76de75dd4a66ba",
  "trails": "90bd0c6493ca51c1",
}
`;

exports[`layout goldens > degScatter {"searchId":105} @beside 1`] = `
{
  "attrs": "cc08c8f86cd24032",
  "colour": "3bb0c763645d6d56",
  "decor": "107fa10bef7b5590",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > degScatter {"searchId":105} @phone 1`] = `
{
  "attrs": "6e093f5938f3edf9",
  "colour": "3bb0c763645d6d56",
  "decor": "e13a191c126757d1",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > degScatter {"searchId":105} @stacked 1`] = `
{
  "attrs": "465091e85879740b",
  "colour": "3bb0c763645d6d56",
  "decor": "6cd3c2069bf2e706",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > degScatter {"searchId":null} @beside 1`] = `
{
  "attrs": "a2834c1bd00a2dde",
  "colour": "9920df70f2a8f9e6",
  "decor": "107fa10bef7b5590",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > degScatter {"searchId":null} @phone 1`] = `
{
  "attrs": "8d9e9007b39b01ab",
  "colour": "9920df70f2a8f9e6",
  "decor": "e13a191c126757d1",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > degScatter {"searchId":null} @stacked 1`] = `
{
  "attrs": "da853ad2ad82a259",
  "colour": "9920df70f2a8f9e6",
  "decor": "6cd3c2069bf2e706",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopAnchor {"anchorId":0,"arriving":false} @beside 1`] = `
{
  "attrs": "1735b594ae83a0b7",
  "colour": "36fc4407f8f127fd",
  "decor": "67418b50cdb92eda",
  "delays": "81adf7d1bf8819f7",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopAnchor {"anchorId":0,"arriving":false} @phone 1`] = `
{
  "attrs": "4d42dcdec6568e17",
  "colour": "36fc4407f8f127fd",
  "decor": "e79276245b20a2a2",
  "delays": "81adf7d1bf8819f7",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopAnchor {"anchorId":0,"arriving":false} @stacked 1`] = `
{
  "attrs": "d73c20e933a27d17",
  "colour": "36fc4407f8f127fd",
  "decor": "21979002f110156c",
  "delays": "81adf7d1bf8819f7",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopAnchor {"anchorId":105,"arriving":false} @beside 1`] = `
{
  "attrs": "c3ab2b53188edd15",
  "colour": "633cb194c0a48b00",
  "decor": "1c0b331edd957b95",
  "delays": "f8bc069d2e84086c",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopAnchor {"anchorId":105,"arriving":false} @phone 1`] = `
{
  "attrs": "a6a91ade664e261e",
  "colour": "0537929f43bb036a",
  "decor": "7a9da37d660bc5fb",
  "delays": "743e57736a443af0",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopAnchor {"anchorId":105,"arriving":false} @stacked 1`] = `
{
  "attrs": "4cd4c1ec5023df4c",
  "colour": "f5b3aa23c5c32117",
  "decor": "9670d39598052910",
  "delays": "cd51a73494f8ee30",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopAnchor {"anchorId":105,"arriving":true} @beside 1`] = `
{
  "attrs": "f794be256c4e3d6f",
  "colour": "633cb194c0a48b00",
  "decor": "1c0b331edd957b95",
  "delays": "f8bc069d2e84086c",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopAnchor {"anchorId":105,"arriving":true} @phone 1`] = `
{
  "attrs": "a288f53fe0bf50c7",
  "colour": "0537929f43bb036a",
  "decor": "7a9da37d660bc5fb",
  "delays": "743e57736a443af0",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopAnchor {"anchorId":105,"arriving":true} @stacked 1`] = `
{
  "attrs": "45394e619316c2f9",
  "colour": "f5b3aa23c5c32117",
  "decor": "9670d39598052910",
  "delays": "cd51a73494f8ee30",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopBands null @beside 1`] = `
{
  "attrs": "23fc9cf9f6834ee1",
  "colour": "862345be28f1acd5",
  "decor": "67418b50cdb92eda",
  "delays": "81adf7d1bf8819f7",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopBands null @phone 1`] = `
{
  "attrs": "21297e898bd438ec",
  "colour": "450941ab62e9a4d7",
  "decor": "e79276245b20a2a2",
  "delays": "81adf7d1bf8819f7",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopBands null @stacked 1`] = `
{
  "attrs": "5ee64f0dde4f9dec",
  "colour": "862345be28f1acd5",
  "decor": "21979002f110156c",
  "delays": "81adf7d1bf8819f7",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopSeed null @beside 1`] = `
{
  "attrs": "d0989fbd17942022",
  "colour": "9920df70f2a8f9e6",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopSeed null @phone 1`] = `
{
  "attrs": "58f7e2c3962f93e2",
  "colour": "9920df70f2a8f9e6",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > hopSeed null @stacked 1`] = `
{
  "attrs": "8525606fa6f6c2ec",
  "colour": "9920df70f2a8f9e6",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > networkIntro {"focus":3} @beside 1`] = `
{
  "attrs": "f0f67ecc6e375732",
  "colour": "53060390b1794711",
  "decor": "d05ae7ffdc3cae20",
  "delays": "3af643a145dbf304",
  "paramWalk": {
    "clear": "d90902e843615224",
    "fadeMs": 400,
    "labelAt": [],
    "ms": 701,
    "windows": "ba150de5a9d5bdab",
  },
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > networkIntro {"focus":3} @phone 1`] = `
{
  "attrs": "c5043da7745d300a",
  "colour": "53060390b1794711",
  "decor": "ace78b214483d2e1",
  "delays": "3af643a145dbf304",
  "paramWalk": {
    "clear": "9b445d8fe098a2c3",
    "fadeMs": 400,
    "labelAt": [],
    "ms": 701,
    "windows": "ba150de5a9d5bdab",
  },
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > networkIntro {"focus":3} @stacked 1`] = `
{
  "attrs": "c9217cf52d1ce396",
  "colour": "53060390b1794711",
  "decor": "0796d37cb912cc4e",
  "delays": "3af643a145dbf304",
  "paramWalk": {
    "clear": "d5921ac4bb6b2195",
    "fadeMs": 400,
    "labelAt": [],
    "ms": 701,
    "windows": "ba150de5a9d5bdab",
  },
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > networkIntro {"focus":null} @beside 1`] = `
{
  "attrs": "48d8e0391475ac11",
  "colour": "7a5f28e5224f75ed",
  "decor": "b2d4b14b84f928d7",
  "delays": "3af643a145dbf304",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > networkIntro {"focus":null} @phone 1`] = `
{
  "attrs": "15373dd1ae7a3a34",
  "colour": "7a5f28e5224f75ed",
  "decor": "de5b76dbda656f3b",
  "delays": "3af643a145dbf304",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > networkIntro {"focus":null} @stacked 1`] = `
{
  "attrs": "37408d7c97c25694",
  "colour": "7a5f28e5224f75ed",
  "decor": "16236ae855f2a329",
  "delays": "3af643a145dbf304",
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > outro {"playhead":2006} @beside 1`] = `
{
  "attrs": "0fb6bfff7c213e94",
  "colour": "9920df70f2a8f9e6",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": "f07e8886d69f44b8",
}
`;

exports[`layout goldens > outro {"playhead":2006} @phone 1`] = `
{
  "attrs": "a8e7f7b7a555e3c7",
  "colour": "9920df70f2a8f9e6",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": "3137933911a92fa8",
}
`;

exports[`layout goldens > outro {"playhead":2006} @stacked 1`] = `
{
  "attrs": "f0a191dd9c488b11",
  "colour": "9920df70f2a8f9e6",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": "68523910c7e3056c",
}
`;

exports[`layout goldens > outro null @beside 1`] = `
{
  "attrs": "a24ba9414da3c89d",
  "colour": "9920df70f2a8f9e6",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": "c031769f740452b6",
}
`;

exports[`layout goldens > outro null @phone 1`] = `
{
  "attrs": "eb74f145157fc27c",
  "colour": "9920df70f2a8f9e6",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": "59efcd1d42df7b1c",
}
`;

exports[`layout goldens > outro null @stacked 1`] = `
{
  "attrs": "2b250d0bd8ae506a",
  "colour": "9920df70f2a8f9e6",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": "5ffb5268d13877bd",
}
`;

exports[`layout goldens > raceClose {"playhead":2006} @beside 1`] = `
{
  "attrs": "db55813f00bb0ddf",
  "colour": "9920df70f2a8f9e6",
  "decor": "0a45276dafcd0377",
  "delays": null,
  "trailDelays": "b349a3eb452c8f93",
  "trails": "f07e8886d69f44b8",
}
`;

exports[`layout goldens > raceClose {"playhead":2006} @phone 1`] = `
{
  "attrs": "31715f924a4d1556",
  "colour": "9920df70f2a8f9e6",
  "decor": "ee7586b527463ad2",
  "delays": null,
  "trailDelays": "b349a3eb452c8f93",
  "trails": "3137933911a92fa8",
}
`;

exports[`layout goldens > raceClose {"playhead":2006} @stacked 1`] = `
{
  "attrs": "fb753c5e123a8a78",
  "colour": "9920df70f2a8f9e6",
  "decor": "f7b906cb29583e39",
  "delays": null,
  "trailDelays": "b349a3eb452c8f93",
  "trails": "68523910c7e3056c",
}
`;

exports[`layout goldens > raceClose null @beside 1`] = `
{
  "attrs": "607f1e255f81bc1d",
  "colour": "4aa4726ef2e31817",
  "decor": "f158f177c4115115",
  "delays": null,
  "trailDelays": "b349a3eb452c8f93",
  "trails": "0a546b0343ce8b62",
}
`;

exports[`layout goldens > raceClose null @phone 1`] = `
{
  "attrs": "813e3e1d0494f0dd",
  "colour": "4aa4726ef2e31817",
  "decor": "4f80b7f825917477",
  "delays": null,
  "trailDelays": "b349a3eb452c8f93",
  "trails": "182bc02f27bb6162",
}
`;

exports[`layout goldens > raceClose null @stacked 1`] = `
{
  "attrs": "65d93c4bd92c846d",
  "colour": "4aa4726ef2e31817",
  "decor": "d473000f970a6c91",
  "delays": null,
  "trailDelays": "b349a3eb452c8f93",
  "trails": "7281bd7494f49223",
}
`;

exports[`layout goldens > raceFull {"playhead":2006} @beside 1`] = `
{
  "attrs": "fb3032365ac23a15",
  "colour": "3bb0c763645d6d56",
  "decor": "0032612fd9078e3b",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "251ee6fdbdd7b793",
}
`;

exports[`layout goldens > raceFull {"playhead":2006} @phone 1`] = `
{
  "attrs": "102808dd3434a35f",
  "colour": "3bb0c763645d6d56",
  "decor": "64d0261e4f625645",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "a799faf71e1a2e2a",
}
`;

exports[`layout goldens > raceFull {"playhead":2006} @stacked 1`] = `
{
  "attrs": "ee59d7f4c1f47c25",
  "colour": "3bb0c763645d6d56",
  "decor": "b525872360410555",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "5610995ccfccb48d",
}
`;

exports[`layout goldens > raceFull null @beside 1`] = `
{
  "attrs": "fb3032365ac23a15",
  "colour": "3bb0c763645d6d56",
  "decor": "0032612fd9078e3b",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "251ee6fdbdd7b793",
}
`;

exports[`layout goldens > raceFull null @phone 1`] = `
{
  "attrs": "102808dd3434a35f",
  "colour": "3bb0c763645d6d56",
  "decor": "64d0261e4f625645",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "a799faf71e1a2e2a",
}
`;

exports[`layout goldens > raceFull null @stacked 1`] = `
{
  "attrs": "ee59d7f4c1f47c25",
  "colour": "3bb0c763645d6d56",
  "decor": "b525872360410555",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "5610995ccfccb48d",
}
`;

exports[`layout goldens > raceFuture {"playhead":2006} @beside 1`] = `
{
  "attrs": "31f7694c6d2d38f2",
  "colour": "3bb0c763645d6d56",
  "decor": "0032612fd9078e3b",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "251ee6fdbdd7b793",
}
`;

exports[`layout goldens > raceFuture {"playhead":2006} @phone 1`] = `
{
  "attrs": "5a774203913728eb",
  "colour": "3bb0c763645d6d56",
  "decor": "64d0261e4f625645",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "a799faf71e1a2e2a",
}
`;

exports[`layout goldens > raceFuture {"playhead":2006} @stacked 1`] = `
{
  "attrs": "a6d49c55ca4fd455",
  "colour": "3bb0c763645d6d56",
  "decor": "b525872360410555",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "5610995ccfccb48d",
}
`;

exports[`layout goldens > raceFuture null @beside 1`] = `
{
  "attrs": "78f4311a618b2352",
  "colour": "3bb0c763645d6d56",
  "decor": "b6fce806a0b6d022",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "baa62b8efd28bccd",
}
`;

exports[`layout goldens > raceFuture null @phone 1`] = `
{
  "attrs": "d7100b13e84c4535",
  "colour": "3bb0c763645d6d56",
  "decor": "d56db62635973cfb",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "4e7e7e8dcddf433c",
}
`;

exports[`layout goldens > raceFuture null @stacked 1`] = `
{
  "attrs": "70983a179fbe7e62",
  "colour": "3bb0c763645d6d56",
  "decor": "e7522fb9a0289965",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "5738335dca2809d7",
}
`;

exports[`layout goldens > raceGenz {"genzShown":false} @beside 1`] = `
{
  "attrs": "82457bd44203b9bd",
  "colour": "9920df70f2a8f9e6",
  "decor": "d0f985d7da9fd74c",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "6f8c123077a61174",
}
`;

exports[`layout goldens > raceGenz {"genzShown":false} @phone 1`] = `
{
  "attrs": "463db068d5fc6a29",
  "colour": "9920df70f2a8f9e6",
  "decor": "8536b702b51464fe",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "603a762f8da4c554",
}
`;

exports[`layout goldens > raceGenz {"genzShown":false} @stacked 1`] = `
{
  "attrs": "77f1677150442f4a",
  "colour": "9920df70f2a8f9e6",
  "decor": "a454dbe6701ed7f5",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "0c6a09f391f72dc9",
}
`;

exports[`layout goldens > raceGenz {"genzShown":true} @beside 1`] = `
{
  "attrs": "c10f140f5e5e7bea",
  "colour": "ae4781dba578cab6",
  "decor": "d0f985d7da9fd74c",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "9afe89bf5acd5af0",
}
`;

exports[`layout goldens > raceGenz {"genzShown":true} @phone 1`] = `
{
  "attrs": "ccb80ea2cdbe7e6a",
  "colour": "ae4781dba578cab6",
  "decor": "8536b702b51464fe",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "a17d0ad72b49a8aa",
}
`;

exports[`layout goldens > raceGenz {"genzShown":true} @stacked 1`] = `
{
  "attrs": "a148750322ec5d2d",
  "colour": "ae4781dba578cab6",
  "decor": "a454dbe6701ed7f5",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "8b0358b30eebcb40",
}
`;

exports[`layout goldens > raceGenz {"playhead":2006,"genzShown":false} @beside 1`] = `
{
  "attrs": "e6e01a996018651e",
  "colour": "9920df70f2a8f9e6",
  "decor": "e8848fcf6d8df0bb",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "2560ef22c8b64d11",
}
`;

exports[`layout goldens > raceGenz {"playhead":2006,"genzShown":false} @phone 1`] = `
{
  "attrs": "76df9fe2281c9add",
  "colour": "9920df70f2a8f9e6",
  "decor": "ac4338385ebe08db",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "dea7faaffed54966",
}
`;

exports[`layout goldens > raceGenz {"playhead":2006,"genzShown":false} @stacked 1`] = `
{
  "attrs": "7249e5e644c170e2",
  "colour": "9920df70f2a8f9e6",
  "decor": "9f114d828033ed28",
  "delays": null,
  "trailDelays": "02becff878e6d0f2",
  "trails": "5b19ddb8fabff428",
}
`;

exports[`layout goldens > raceRecent {"playhead":2006} @beside 1`] = `
{
  "attrs": "fb3032365ac23a15",
  "colour": "3bb0c763645d6d56",
  "decor": "0032612fd9078e3b",
  "delays": null,
  "trailDelays": "57327e672d6d2d0d",
  "trails": "251ee6fdbdd7b793",
}
`;

exports[`layout goldens > raceRecent {"playhead":2006} @phone 1`] = `
{
  "attrs": "102808dd3434a35f",
  "colour": "3bb0c763645d6d56",
  "decor": "64d0261e4f625645",
  "delays": null,
  "trailDelays": "57327e672d6d2d0d",
  "trails": "a799faf71e1a2e2a",
}
`;

exports[`layout goldens > raceRecent {"playhead":2006} @stacked 1`] = `
{
  "attrs": "ee59d7f4c1f47c25",
  "colour": "3bb0c763645d6d56",
  "decor": "b525872360410555",
  "delays": null,
  "trailDelays": "57327e672d6d2d0d",
  "trails": "5610995ccfccb48d",
}
`;

exports[`layout goldens > raceRecent null @beside 1`] = `
{
  "attrs": "6652c65c848ff5df",
  "colour": "3bb0c763645d6d56",
  "decor": "a2bfc25bef8408b3",
  "delays": null,
  "trailDelays": "57327e672d6d2d0d",
  "trails": "2d80856a7a49b4e4",
}
`;

exports[`layout goldens > raceRecent null @phone 1`] = `
{
  "attrs": "0447d0ce13b41946",
  "colour": "3bb0c763645d6d56",
  "decor": "a0ca8fcc649e9a92",
  "delays": null,
  "trailDelays": "57327e672d6d2d0d",
  "trails": "f0596c752e115b44",
}
`;

exports[`layout goldens > raceRecent null @stacked 1`] = `
{
  "attrs": "fdb91506763c20a6",
  "colour": "3bb0c763645d6d56",
  "decor": "a4fb3d183fb8d9a3",
  "delays": null,
  "trailDelays": "57327e672d6d2d0d",
  "trails": "00d49dfbfd22ac56",
}
`;

exports[`layout goldens > rankFocus {"bar":{"x":120,"y":300,"w":400},"bare":false} @beside 1`] = `
{
  "attrs": "5189bc83f8c5dd81",
  "colour": "4a75cd65259f479a",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankFocus {"bar":{"x":120,"y":300,"w":400},"bare":false} @phone 1`] = `
{
  "attrs": "5189bc83f8c5dd81",
  "colour": "4a75cd65259f479a",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankFocus {"bar":{"x":120,"y":300,"w":400},"bare":false} @stacked 1`] = `
{
  "attrs": "5189bc83f8c5dd81",
  "colour": "4a75cd65259f479a",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankFocus {"bar":null,"bare":false} @beside 1`] = `
{
  "attrs": "42dcc371acfb1639",
  "colour": "4a75cd65259f479a",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankFocus {"bar":null,"bare":false} @phone 1`] = `
{
  "attrs": "0c95462556d597f2",
  "colour": "4a75cd65259f479a",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankFocus {"bar":null,"bare":false} @stacked 1`] = `
{
  "attrs": "42dcc371acfb1639",
  "colour": "4a75cd65259f479a",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankFocus {"bar":null,"bare":true} @beside 1`] = `
{
  "attrs": "0d807b90d380ff4d",
  "colour": "4a75cd65259f479a",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankFocus {"bar":null,"bare":true} @phone 1`] = `
{
  "attrs": "47fe4f33b56db19c",
  "colour": "4a75cd65259f479a",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankFocus {"bar":null,"bare":true} @stacked 1`] = `
{
  "attrs": "0d807b90d380ff4d",
  "colour": "4a75cd65259f479a",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankReveal {"bar":{"x":120,"y":300,"w":400},"bare":false} @beside 1`] = `
{
  "attrs": "5189bc83f8c5dd81",
  "colour": "4a75cd65259f479a",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankReveal {"bar":{"x":120,"y":300,"w":400},"bare":false} @phone 1`] = `
{
  "attrs": "5189bc83f8c5dd81",
  "colour": "4a75cd65259f479a",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankReveal {"bar":{"x":120,"y":300,"w":400},"bare":false} @stacked 1`] = `
{
  "attrs": "5189bc83f8c5dd81",
  "colour": "4a75cd65259f479a",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankReveal {"bar":null,"bare":false} @beside 1`] = `
{
  "attrs": "42dcc371acfb1639",
  "colour": "4a75cd65259f479a",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankReveal {"bar":null,"bare":false} @phone 1`] = `
{
  "attrs": "0c95462556d597f2",
  "colour": "4a75cd65259f479a",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankReveal {"bar":null,"bare":false} @stacked 1`] = `
{
  "attrs": "42dcc371acfb1639",
  "colour": "4a75cd65259f479a",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankReveal {"bar":null,"bare":true} @beside 1`] = `
{
  "attrs": "0d807b90d380ff4d",
  "colour": "4a75cd65259f479a",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankReveal {"bar":null,"bare":true} @phone 1`] = `
{
  "attrs": "47fe4f33b56db19c",
  "colour": "4a75cd65259f479a",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > rankReveal {"bar":null,"bare":true} @stacked 1`] = `
{
  "attrs": "0d807b90d380ff4d",
  "colour": "4a75cd65259f479a",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showFilms":true,"searchId":105} @beside 1`] = `
{
  "attrs": "1dd8398c568351b9",
  "colour": "3bb0c763645d6d56",
  "decor": "844e44ef5a6908f3",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showFilms":true,"searchId":105} @phone 1`] = `
{
  "attrs": "d6bb71aed6188f8c",
  "colour": "3bb0c763645d6d56",
  "decor": "195efd89bae94198",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showFilms":true,"searchId":105} @stacked 1`] = `
{
  "attrs": "5f12b2b78ec87a54",
  "colour": "3bb0c763645d6d56",
  "decor": "8dab2eadf22f252b",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showFilms":true,"searchId":null} @beside 1`] = `
{
  "attrs": "d77409ecf04b44da",
  "colour": "9920df70f2a8f9e6",
  "decor": "844e44ef5a6908f3",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showFilms":true,"searchId":null} @phone 1`] = `
{
  "attrs": "42389b5e956975e7",
  "colour": "9920df70f2a8f9e6",
  "decor": "195efd89bae94198",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showFilms":true,"searchId":null} @stacked 1`] = `
{
  "attrs": "5688740e21f5407f",
  "colour": "9920df70f2a8f9e6",
  "decor": "8dab2eadf22f252b",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"searchId":105} @beside 1`] = `
{
  "attrs": "3076b529593077ad",
  "colour": "3bb0c763645d6d56",
  "decor": "844e44ef5a6908f3",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"searchId":105} @phone 1`] = `
{
  "attrs": "72303224fd52292c",
  "colour": "3bb0c763645d6d56",
  "decor": "195efd89bae94198",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"searchId":105} @stacked 1`] = `
{
  "attrs": "e124609c9dca0fd0",
  "colour": "3bb0c763645d6d56",
  "decor": "8dab2eadf22f252b",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"searchId":null} @beside 1`] = `
{
  "attrs": "2b298554590dfb16",
  "colour": "9920df70f2a8f9e6",
  "decor": "844e44ef5a6908f3",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"searchId":null} @phone 1`] = `
{
  "attrs": "3d9a094d3d422cb3",
  "colour": "9920df70f2a8f9e6",
  "decor": "195efd89bae94198",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"searchId":null} @stacked 1`] = `
{
  "attrs": "1e5d1176f2f9f5eb",
  "colour": "9920df70f2a8f9e6",
  "decor": "8dab2eadf22f252b",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"showCostars":true,"searchId":105} @beside 1`] = `
{
  "attrs": "3076b529593077ad",
  "colour": "3bb0c763645d6d56",
  "decor": "844e44ef5a6908f3",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"showCostars":true,"searchId":105} @phone 1`] = `
{
  "attrs": "72303224fd52292c",
  "colour": "3bb0c763645d6d56",
  "decor": "195efd89bae94198",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"showCostars":true,"searchId":105} @stacked 1`] = `
{
  "attrs": "e124609c9dca0fd0",
  "colour": "3bb0c763645d6d56",
  "decor": "8dab2eadf22f252b",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"showCostars":true,"searchId":null} @beside 1`] = `
{
  "attrs": "2b298554590dfb16",
  "colour": "9920df70f2a8f9e6",
  "decor": "844e44ef5a6908f3",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"showCostars":true,"searchId":null} @phone 1`] = `
{
  "attrs": "3d9a094d3d422cb3",
  "colour": "9920df70f2a8f9e6",
  "decor": "195efd89bae94198",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterCenters {"showPair":true,"showCostars":true,"searchId":null} @stacked 1`] = `
{
  "attrs": "1e5d1176f2f9f5eb",
  "colour": "9920df70f2a8f9e6",
  "decor": "8dab2eadf22f252b",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterQuiz {"picks":{"0":1},"revealAll":true,"searchId":null} @beside 1`] = `
{
  "attrs": "98bc756cf78f1880",
  "colour": "11a6901d4a4c2317",
  "decor": "844e44ef5a6908f3",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterQuiz {"picks":{"0":1},"revealAll":true,"searchId":null} @phone 1`] = `
{
  "attrs": "f250b6c10c9a30f7",
  "colour": "11a6901d4a4c2317",
  "decor": "195efd89bae94198",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterQuiz {"picks":{"0":1},"revealAll":true,"searchId":null} @stacked 1`] = `
{
  "attrs": "cf6832371b4fb16d",
  "colour": "11a6901d4a4c2317",
  "decor": "8dab2eadf22f252b",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterQuiz {"picks":{},"revealAll":false,"searchId":105} @beside 1`] = `
{
  "attrs": "cc40f47779bf09f0",
  "colour": "3bb0c763645d6d56",
  "decor": "844e44ef5a6908f3",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterQuiz {"picks":{},"revealAll":false,"searchId":105} @phone 1`] = `
{
  "attrs": "c66177e77fbcb43e",
  "colour": "3bb0c763645d6d56",
  "decor": "195efd89bae94198",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterQuiz {"picks":{},"revealAll":false,"searchId":105} @stacked 1`] = `
{
  "attrs": "04909a9baf514945",
  "colour": "3bb0c763645d6d56",
  "decor": "8dab2eadf22f252b",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterQuiz {"picks":{},"revealAll":false,"searchId":null} @beside 1`] = `
{
  "attrs": "751e710895ab733d",
  "colour": "9920df70f2a8f9e6",
  "decor": "844e44ef5a6908f3",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterQuiz {"picks":{},"revealAll":false,"searchId":null} @phone 1`] = `
{
  "attrs": "8c9e24a732d274cd",
  "colour": "9920df70f2a8f9e6",
  "decor": "195efd89bae94198",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > scatterQuiz {"picks":{},"revealAll":false,"searchId":null} @stacked 1`] = `
{
  "attrs": "766a15e768698a24",
  "colour": "9920df70f2a8f9e6",
  "decor": "8dab2eadf22f252b",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > simRace {"runs":0,"names":0} @beside 1`] = `
{
  "attrs": "2624db9de994211f",
  "colour": "0835cca37022255f",
  "decor": "080cb30d9888a7d1",
  "delays": null,
  "trailDelays": null,
  "trails": "86b46b362892c32c",
}
`;

exports[`layout goldens > simRace {"runs":0,"names":0} @phone 1`] = `
{
  "attrs": "6fdb038f46938129",
  "colour": "0835cca37022255f",
  "decor": "a72b86267340a5d6",
  "delays": null,
  "trailDelays": null,
  "trails": "863c09ed0cd82558",
}
`;

exports[`layout goldens > simRace {"runs":0,"names":0} @stacked 1`] = `
{
  "attrs": "f45023a126aa65e3",
  "colour": "0835cca37022255f",
  "decor": "7b04c5ef1e53acbd",
  "delays": null,
  "trailDelays": null,
  "trails": "5b995767da8e8694",
}
`;

exports[`layout goldens > simRace {"runs":10000,"names":5} @beside 1`] = `
{
  "attrs": "7a1dd09359d560ec",
  "colour": "0835cca37022255f",
  "decor": "080cb30d9888a7d1",
  "delays": null,
  "trailDelays": null,
  "trails": "af06ea4ed5fb4418",
}
`;

exports[`layout goldens > simRace {"runs":10000,"names":5} @phone 1`] = `
{
  "attrs": "cbad9e14e7875e24",
  "colour": "0835cca37022255f",
  "decor": "a72b86267340a5d6",
  "delays": null,
  "trailDelays": null,
  "trails": "58f1c21582e9e72d",
}
`;

exports[`layout goldens > simRace {"runs":10000,"names":5} @stacked 1`] = `
{
  "attrs": "f135b5987df952c8",
  "colour": "0835cca37022255f",
  "decor": "7b04c5ef1e53acbd",
  "delays": null,
  "trailDelays": null,
  "trails": "d672d72b6ffa9433",
}
`;

exports[`layout goldens > titleGalaxy null @beside 1`] = `
{
  "attrs": "d0989fbd17942022",
  "colour": "9920df70f2a8f9e6",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > titleGalaxy null @phone 1`] = `
{
  "attrs": "58f7e2c3962f93e2",
  "colour": "9920df70f2a8f9e6",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;

exports[`layout goldens > titleGalaxy null @stacked 1`] = `
{
  "attrs": "8525606fa6f6c2ec",
  "colour": "9920df70f2a8f9e6",
  "decor": "bf21a9e8fbc5a384",
  "delays": null,
  "trailDelays": null,
  "trails": null,
}
`;
